<?xml version = "1.0" encoding = "utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:padding="5dp"
    android:paddingStart="10dp"
    android:background="@color/app_logo_color_nclick"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <ImageView
            android:layout_marginStart="3dp"
            android:layout_marginEnd="8dp"
            android:layout_width="16dp"
            android:scaleType="fitCenter"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="10sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifTitle_tr"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/light_black"
        android:layout_margin="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifBody_tr"
        android:textSize="12sp"
        android:textColor="@color/light_black"
        android:layout_margin="2dp"/>

</LinearLayout>