<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:id="@+id/homeOuterLayout">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="3dp"
        android:id="@+id/countLayout">
        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/curved_rectangular"
                android:layout_weight="50"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp">
                <TextView
                    android:id="@+id/totalInfections"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/null_placeholder"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/infection_color">
                </TextView>
                <TextView
                    android:id="@+id/infectHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/count_text"
                    android:text="@string/infection_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/curved_rectangular"
                android:layout_weight="50"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp">
                <TextView
                    android:id="@+id/totalDeaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/null_placeholder"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/death_color"
                    android:layout_gravity="center">
                </TextView>
                <TextView
                    android:id="@+id/deathHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/death_text"
                    android:textColor="@color/count_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/curved_rectangular"
                android:layout_weight="50"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp">
                <TextView
                    android:id="@+id/totalRecoveries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/null_placeholder"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/recovered_color"
                    android:layout_gravity="center">
                </TextView>
                <TextView
                    android:id="@+id/recoverHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered_text"
                    android:textSize="18sp"
                    android:textColor="@color/count_text"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/curved_rectangular"
                android:layout_weight="50"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp">
                <TextView
                    android:id="@+id/totalCritical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/null_placeholder"
                    android:textSize="30sp"
                    android:textColor="@color/critical_color"
                    android:textStyle="bold"
                    android:layout_gravity="center">
                </TextView>
                <TextView
                    android:id="@+id/criticalHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/critical_text"
                    android:textColor="@color/count_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/countLayout"
        android:id="@+id/countrySearchLayout"
        android:orientation="horizontal"
        android:weightSum="100"
        android:background="@drawable/search_bar_bg"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="12dp">

        <EditText
            android:id="@+id/searchCountryInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:hint="@string/country_search_bar_hint"
            android:background="@null"
            android:textSize="18sp"
            android:maxLines="1">
        </EditText>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:textAlignment="center"
            android:id="@+id/sortBySpinner"
            android:spinnerMode="dropdown">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingBottom="3dp"
        android:id="@+id/searchTitlesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:background="@drawable/white_gray_border_top"
        app:layout_constraintTop_toBottomOf="@id/countrySearchLayout">

        <TextView
            android:id="@+id/labelCountryHome"
            android:paddingStart="6dp"
            android:layout_width="0dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="Country"
            android:textColor="@color/count_text"
            android:layout_weight="30">
        </TextView>

        <TextView
            android:id="@+id/labelTotalHome"
            android:textColor="@color/count_text"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Total"
            android:layout_weight="40"
            android:textAlignment="center">
        </TextView>
        <TextView
            android:id="@+id/labelTodayHome"
            android:paddingEnd="6dp"
            android:textColor="@color/count_text"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Today"
            android:layout_weight="30"
            android:textAlignment="textEnd">
        </TextView>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/countryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/searchTitlesLayout"
        app:layout_constraintBottom_toBottomOf="parent">
    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>