<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/langHeader"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/white_gray_border_top_lang">

        <TextView
            android:id="@+id/langHeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_header"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lang1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.5dp"
        android:background="@drawable/opt_background"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/langHeader">

        <TextView
            android:id="@+id/lang1text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/tr_lang_tr"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <LinearLayout
            android:id="@+id/lang1gap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/lang1check"
            app:layout_constraintStart_toEndOf="@+id/lang1text"
            app:layout_constraintTop_toTopOf="parent">
        </LinearLayout>

        <ImageView
            android:src="@drawable/check_24"
            android:id="@+id/lang1check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">
        </ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lang2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/opt_background"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/lang1">

        <TextView
            android:id="@+id/lang2text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/en_lang"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <LinearLayout
            android:id="@+id/lang2gap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/lang2check"
            app:layout_constraintStart_toEndOf="@+id/lang2text"
            app:layout_constraintTop_toTopOf="parent">
        </LinearLayout>

        <ImageView
            android:src="@drawable/check_24"
            android:id="@+id/lang2check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">
        </ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>