<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorldMapFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mapTopLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <LinearLayout
                    android:id="@+id/mapInfect"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="50"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/map_top_layout">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/infect_circle_20"
                        android:layout_marginEnd="5dp">
                    </ImageView>

                    <TextView
                        android:id="@+id/mapInfectText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textColor="@color/light_black"
                        android:text="@string/map_infect"
                        android:textSize="@dimen/map_frag_text_size"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mapDeath"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="50"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/map_top_layout_inactive">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/death_circle_20"
                        android:layout_marginEnd="5dp">
                    </ImageView>

                    <TextView
                        android:id="@+id/mapDeathText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textColor="@color/inactive_legend"
                        android:text="@string/map_death"
                        android:textSize="@dimen/map_frag_text_size"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/mapRecover"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="50"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/map_top_layout_inactive">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/recover_circle_20"
                        android:layout_marginEnd="5dp">
                    </ImageView>

                    <TextView
                        android:id="@+id/mapRecoverText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textColor="@color/inactive_legend"
                        android:text="@string/map_recover"
                        android:textSize="@dimen/map_frag_text_size"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mapCritical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="50"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/map_top_layout_inactive">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/critical_circle_20"
                        android:layout_marginEnd="5dp">
                    </ImageView>

                    <TextView
                        android:id="@+id/mapCriticalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textColor="@color/inactive_legend"
                        android:text="@string/map_critical"
                        android:textSize="@dimen/map_frag_text_size"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <com.google.android.gms.maps.MapView
            android:id="@+id/worldMap"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_default="spread"
            app:layout_constraintTop_toBottomOf="@id/mapTopLayout"
            app:layout_constraintWidth_default="spread">
        </com.google.android.gms.maps.MapView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>